--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Foodie</string>
 
     <string name="base_url">https://api.github.com</string>
+
+    <string name="welcome_messages">%1$d. %2$s</string>
 </resources>
